2003-04-11  Bradley Bell  <btb@icculus.org>

	* configure.ac: use different defines for os x

2003-04-07  Bradley Bell  <btb@icculus.org>

	* include/error.h, misc/error.c: put some old stuff back in,
	eliminate duplicate error messages

	* main/text.c: don't die on text not found
	formatting

	* main/inferno.c: print some useful info if hog not found, allow
	-help to work if no text available

2003-04-07  Steffen Pohle <stpohle@gmx.net>

	* arch/linux/Makefile.am: revert to previous version, so linux
	joystick works

2003-04-03  Bradley Bell  <btb@icculus.org>

	* main/endlevel.c: fixed exit model scheme yet again

2003-04-02  Bradley Bell  <btb@icculus.org>

	* misc/error.c: call Int3 on Assert

	* main/cntrlcen.c, main/cntrlcen.h, main/gamesave.c: modified
	trigger reader

	* main/wall.c: don't die when trying to toggle nonexistent
	segment... vertigo level 10 is buggy!

	* main/gamemine.c: comments/formatting

2003-03-31  Micah J. Lieske  <MicahJon@compuserve.com>

	* arch/dos/digimm.c, arch/sdl/digi.c, arch/win32/digi.c,
	main/inferno.c: Allow use of 22K sound samples

2003-03-29  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c: default to bitmapped reticle

	* main/bm.c, main/endlevel.c, main/piggy.c, main/piggy.h,
	main/polyobj.c: rewrote endlevel stuff to reread exit model info
	every time

	* arch/sdl/joy.c: fixed text seen for hats in control config
	screen

2003-03-28  Bradley Bell  <btb@icculus.org>

	* main/bm.c: heh, model nums in vertigo are hardcoded,
	N_D2_POLYGON_MODELS can't change

	* configure.ac, include/d1x.xpm, include/descent.xpm,
	arch/ogl/sdlgl.c, arch/sdl/gr.c: enabled setting icon with
	SDL_image

2003-03-27  Bradley Bell  <btb@icculus.org>

	* main/text.h: fixed text references for hat directions

	* arch/ogl/Makefile.am: oops, can't get rid of main INCLUDE yet...

2003-03-26  Bradley Bell  <btb@icculus.org>

	* main/playsave.c: make d2x keys backward compatible

2003-03-26  Micah J. Lieske  <MicahJon@compuserve.com>
