@@ -4,8 +4,8 @@
  *
  */
 
-#ifndef _MVEPLAY_H
-#define _MVEPLAY_H
+#ifndef _DECODERS_H
+#define _DECODERS_H
 
 extern int g_width, g_height;
 extern void *g_vBackBuf1, *g_vBackBuf2;
@@ -13,4 +13,4 @@ extern void *g_vBackBuf1, *g_vBackBuf2;
 extern void decodeFrame8(unsigned char *pFrame, unsigned char *pMap, int mapRemain, unsigned char *pData, int dataRemain);
 extern void decodeFrame16(unsigned char *pFrame, unsigned char *pMap, int mapRemain, unsigned char *pData, int dataRemain);
 
-#endif // _MVEPLAY_H
+#endif // _DECODERS_H
