@@ -1,5 +1,11 @@
 2003-04-11  Bradley Bell  <btb@icculus.org>
 
+	* README, arch/sdl/digi.c, arch/sdl/joy.c, arch/win32/Makefile.am,
+	include/byteswap.h, include/cfile.h, include/error.h,
+	libmve/Makefile.am, libmve/decoders.h, main/Makefile.am,
+	main/endlevel.c, main/endlevel.h, main/playsave.c,
+	misc/fileutil.c: comments/formatting/dist problems
+
 	* configure.ac: use different defines for os x
 
 2003-04-07  Bradley Bell  <btb@icculus.org>
